# python-project-hatch

./: LICENSE  README.md  pyproject.toml
src/python_project_hatch/: __about__.py
tests/: __init__.py
