[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-project-hatch"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Mohit Shrestha", email = "contact@mohitshrestha.com.np" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/mohitshrestha/python-project-hatch#readme"
Issues = "https://github.com/mohitshrestha/python-project-hatch/issues"
Source = "https://github.com/mohitshrestha/python-project-hatch"

[tool.hatch.version]
path = "src/python_project_hatch/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/python_project_hatch tests}"

[tool.coverage.run]
source_pkgs = ["python_project_hatch", "tests"]
branch = true
parallel = true
omit = [
  "src/python_project_hatch/__about__.py",
]

[tool.coverage.paths]
python_project_hatch = ["src/python_project_hatch", "*/python-project-hatch/src/python_project_hatch"]
tests = ["tests", "*/python-project-hatch/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
